GNOME Bugzilla – Bug 661803
Marshaler generation broken for applet directory
Last modified: 2011-10-17 10:14:08 UTC
When I'm building the latest gnome-bluetooth, I get the following error: make[2]: Entering directory `/home/mazik/gnome-shell/source/gnome-bluetooth/applet' GEN marshal.h /bin/sh: --prefix=marshal: command not found make[2]: *** [marshal.h] Error 127 It looks like it happens because defining GLIB_GENMARSHAL got removed in commit "bf8dec6760bbb4ad39adb3552853c595860fdf33", but applet directory Makefile is still trying to generate the marshalers.
commit c6d4160b4fe208b2edc6fd832517442aaa671406 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Oct 17 11:10:22 2011 +0100 applet: Fix build problems with marshallers Use the generic marshallers, instead of bothering with creating our own. https://bugzilla.gnome.org/show_bug.cgi?id=661803