applet: Fix build problems with marshallers

Use the generic marshallers, instead of bothering with
creating our own.

https://bugzilla.gnome.org/show_bug.cgi?id=661803